fix(proprietary-banking): `FeedItem` only render actions when visible

--- a/projects/core/styles/theme/wrapper/secondary.less
+++ b/projects/core/styles/theme/wrapper/secondary.less
@@ -29,7 +29,7 @@ tui-wrapper[data-appearance='flat'] {
         }
 
         &._focused:after {
-            color: var(--tui-base-01);
+            color: var(--tui-text-01-night);
         }
     }
 
